# ollama-router

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  test.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/brainstorms/: 2026-05-30-flakiness-mitigation-requirements.md
docs/plans/: 2026-05-30-001-feat-flakiness-mitigation-plan.md
src/: auth.rs  config.rs  handler.rs  heartbeat.rs  lib.rs  main.rs  metrics.rs  models.rs  proxy.rs  registry.rs  response.rs  routes.rs  spill.rs  telemetry.rs  translate.rs
tests/: config_test.rs  integration_test.rs
