[package]
name = "ollama-router"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
bytes = "1"
futures-util = "0.3"
http-body-util = "0.1"
hyper = "1"
prometheus-client = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
